--- a/demo-springcloud-x/src/main/resources/application.yml
+++ b/demo-springcloud-x/src/main/resources/application.yml
@@ -11,3 +11,5 @@ spring:
         metadata:
           group-name: demo
           version: 0.0.1-SNAPSHOT
+  zipkin:
+    base-url: http://10.10.8.167:9411
