--- a/demo-springcloud-y/src/main/resources/application.yml
+++ b/demo-springcloud-y/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   zipkin:
     base-url: http://10.10.8.167:9411
   datasource:
-    url: jdbc:mysql://10.10.8.167:3306/gitlab
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://10.10.8.167:3306/gitlab?statementInterceptors=brave.mysql.TracingStatementInterceptor&zipkinServiceName=demo-springboot-y&useSSL=false
     username: root
     password: 123456
